update command line tools